--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -6,12 +6,12 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="400.0" maxWidth="486.0" prefHeight="400.0" prefWidth="486.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1" fx:controller="application.SampleController">
+<AnchorPane maxHeight="400.0" maxWidth="486.0" prefHeight="400.0" prefWidth="486.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
       <ListView fx:id="resultListView" layoutX="14.0" layoutY="82.0" prefHeight="200.0" prefWidth="200.0" />
       <ImageView fx:id="resultImageView" fitHeight="200.0" fitWidth="240.0" layoutX="228.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="status" layoutX="24.0" layoutY="21.0" prefHeight="17.0" prefWidth="132.0" text="Label" />
       <Button fx:id="finishStartButton" layoutX="195.0" layoutY="339.0" mnemonicParsing="false" onAction="#finishStartButtonClick" text="Başlat" />
+      <Button fx:id="scan" layoutX="332.0" layoutY="339.0" mnemonicParsing="false" onAction="#scanclick" text="Tara" />
    </children>
 </AnchorPane>
